# fastest-growing-companies

./: .gitignore  .mcp.json  AGENTS.md  CLAUDE.md  README.md
.claude/: settings.json
cfo-enricher/: AGENTS.md  README.md  agent_enricher.py  merge_by_year.py  monitor_server.py  pyproject.toml  run_state.py  start.sh
cfo-enricher/data/: 2019.csv  2020.csv  2021.csv  2022.csv  2023.csv  2024.csv  2025.csv  2026.csv
cfo-enricher/docs/: architecture.md
cfo-enricher/output/2026/: enriched.csv  enrichment_progress.jsonl
dashboard/: next.config.mjs  package-lock.json  package.json
dashboard/docs/: PROGRESS.md
dashboard/docs/architecture/: API.md  DATABASE.md
dashboard/docs/docs/: PRD.md  PROGRESS.md
dashboard/docs/features/: CAMPAIGNS.md  COMPANY_DETAIL_MODAL.md  ENRICHMENT_CATEGORIES.md  ENRICHMENT_SESSIONS.md  IMPORTS.md  LINKEDIN_MONITOR.md  LINKEDIN_SEARCH.md
dashboard/public/data/: 2026_cleaned.csv  2026_cleaned_en.csv
dashboard/scripts/: backfill_cfo_category.ts  clean_data.py  migrate_to_supabase.ts
dashboard/src/: middleware.ts
focus-wachstumschampions/: README.md  compact_wch_jsonl.py  scrape_wch.py
focus-wachstumschampions/output/: wachstumschampions_companies.compact.en.jsonl
focus-wachstumschampions/tests/: test_scrape_wch.py
ft1000/: pyproject.toml  scrape_ft1000.py
ft1000/output/: ft1000_europe_2025.csv
linkedin-enricher/: agent_enricher.py  monitor_server.py  pyproject.toml  run_state.py  start.sh
linkedin-enricher/output/run/: enriched.csv  linkedin_progress.jsonl  monitor_events.jsonl
linkedin-outreach-plugin/: Code.gs  README.md  background.js  content.js  manifest.json  options.html  package-lock.json  package.json  popup.html  style.css  tsconfig.json  vite.config.ts
(+146 files in other folders)
