[project]
name = "cfo-enricher"
version = "0.1.0"
description = "Enricher per CFO/DAF delle aziende Leader della Crescita"
requires-python = ">=3.14"
dependencies = [
  "requests>=2.32.0",
  "beautifulsoup4>=4.12.0",
  "ddgs>=0.1.0",
  "playwright>=1.49.0",
  "anthropic>=0.40.0",
  "claude-agent-sdk>=0.1.0",
  "fastapi>=0.115.0",
  "uvicorn>=0.34.0",
  "sse-starlette>=2.0.0",
]

[dependency-groups]
dev = [
  "ruff>=0.9.0",
]

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
# E402: module-level imports not at top of file — intentional, config vars come first
ignore = ["E402"]
